# DemonstratorenGUI

./: app.py  pyproject.toml
pages/: home.py  page1.py  page2.py
