[tool.poetry]
name = "demonstratorengui"
version = "0.1.0"
description = ""
authors = ["BenitoSchwankhart <39334512+BenitoSchwankhart@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
