[tool.poetry]
name = "demonstratorengui"
version = "0.1.0"
description = ""
authors = ["BenitoSchwankhart <39334512+BenitoSchwankhart@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
streamlit = "^1.21.0"
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
tensorflow = "^2.17.0"
diffusers = "^0.29.2"
transformers = ">=4.33.0,<4.41.0"
coqui-tts = "^0.24.1"
torch = ">=2.2.0,<2.3.0"
facenet-pytorch = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
